# viewerforvicon

./: .gitignore  CMakeLists.txt  README.md
lib/: Client.h
src/: BaseApplication.h  CMakeLists.txt  ViconMarker.cpp  ViconMarker.h  ViconSubject.cpp  ViconSubject.h  ViewerApplication.cpp  ViewerApplication.h  viewer.cpp
test/: CMakeLists.txt  ViconDataStreamSDK_CPPTest.cpp
